@@ -31,6 +31,8 @@ Contributors (alphabetically ordered):
 	Improved ESRenderer layoutSubview
 	Improved Debug Drawing for Sprite batched node	
 
+* podhrask...@gmail.com
+	TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler. patch
 * Ricardo Ruiz:
 	Added support for RGB888 textures
 
